@@ -1,3 +1,11 @@
+2001-11-07
+----------
+* Error when deleting didn't work (undefined subroutine GUI_DB_Error)
+
+2001-09-17
+----------
+* '-->' in records could break debug comments
+
 2001-08-24
 ----------
 * display correctly '0' in readonly fields (Nico Latzer <nico.latzer@r-kom.de>)
